unpackaged/main/default/objects/Customer_Price_List__c/Customer_Price_List__c.object-meta.xml
<CustomObject>
    <description>Junction between Price List and Customers</description>
    <label>Customer Price List</label>
    <nameField>
        <displayFormat>CPL-{0000000000}</displayFormat>
        <label>Customer Price List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Price Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>