unpackaged/main/default/objects/Customer_Price_List__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The customer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Price Lists</relationshipLabel>
    <relationshipName>Customer_Price_Lists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>