unpackaged/main/default/objects/Customer_Price_List__c/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <description>Description of error code from EBS</description>
    <label>Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>