unpackaged/main/default/objects/Customer_Price_List__c/fields/Code_Meaning__c.field-meta.xml
<CustomField>
    <fullName>Code_Meaning__c</fullName>
    <description>Meaning of error from EBS</description>
    <label>Code Meaning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>