unpackaged/main/default/objects/Customer_Price_List__c/fields/Cost_Zone__c.field-meta.xml
<CustomField>
    <fullName>Cost_Zone__c</fullName>
    <formula>TEXT(Price_List__r.Cost_Zone__c)</formula>
    <label>Cost Zone</label>
    <type>Text</type>
</CustomField>