unpackaged/main/default/objects/Customer_Price_List__c/fields/CPL_Status__c.field-meta.xml
<CustomField>
    <fullName>CPL_Status__c</fullName>
    <formula>IF(TEXT(Price_List__r.Status__c) = &#39;Active&#39;, IF(Start_Date__c &lt;= TODAY()  &amp;&amp;  End_Date__c &gt;= TODAY(), &quot;Active&quot;,&quot;Inactive&quot;), &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>