unpackaged/main/default/objects/Customer_Price_List__c/fields/Customer_Price_List_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_List_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Definition Id of the price list assoicated to a customer</description>
    <externalId>true</externalId>
    <label>Customer Price List ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>