unpackaged/main/default/objects/Customer_Price_List__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Customer Price Lists End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>