unpackaged/main/default/objects/Customer_Price_List__c/fields/Parent_CPL__c.field-meta.xml
<CustomField>
    <fullName>Parent_CPL__c</fullName>
    <description>Store Parent Customer Price List Id in child cpl</description>
    <label>Parent CPL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>