unpackaged/main/default/objects/Customer_Price_List__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <description>The price list</description>
    <label>Price List</label>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipLabel>Customer Price Lists</relationshipLabel>
    <relationshipName>Customer_Price_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>