unpackaged/main/default/objects/Customer_Price_List__c/fields/Price_List_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_List_End_Date__c</fullName>
    <formula>Price_List__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List End Date</label>
    <type>Date</type>
</CustomField>