unpackaged/main/default/objects/Customer_Price_List__c/fields/Price_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Name__c</fullName>
    <formula>Price_List__r.Price_List_Name__c</formula>
    <label>Price List Name</label>
    <type>Text</type>
</CustomField>