unpackaged/main/default/objects/Customer_Price_List__c/fields/Price_List_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Start_Date__c</fullName>
    <formula>Price_List__r.Start_Date__c</formula>
    <label>Price List Start Date</label>
    <type>Date</type>
</CustomField>