unpackaged/main/default/objects/Customer_Price_List__c/fields/Price_List_Status__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Status__c</fullName>
    <formula>TEXT(Price_List__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Status</label>
    <type>Text</type>
</CustomField>