unpackaged/main/default/objects/Customer_Price_List__c/fields/Pricing_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Status__c</fullName>
    <label>Pricing Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Assignment Approval</fullName>
            </value>
            <value>
                <fullName>Pending Removal Approval</fullName>
            </value>
            <value>
                <fullName>Submitted to CPS</fullName>
            </value>
            <value>
                <fullName>CPS Submission Failure</fullName>
            </value>
            <value>
                <fullName>CPS Approved</fullName>
            </value>
            <value>
                <fullName>Manager Actioned</fullName>
                <isActive>false</isActive>
                <label>Manager Actioned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>