unpackaged/main/default/objects/Customer_Price_List__c/fields/Primary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segment__c</fullName>
    <formula>Price_List__r.Primary_Segment__c</formula>
    <label>Primary Segment</label>
    <type>Text</type>
</CustomField>