unpackaged/main/default/objects/Customer_Price_List__c/fields/Secondary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Segment__c</fullName>
    <formula>Price_List__r.Secondary_Segment__c</formula>
    <label>Secondary Segment</label>
    <type>Text</type>
</CustomField>