unpackaged/main/default/objects/Customer_Price_List__c/fields/Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band__c</fullName>
    <formula>Price_List__r.Spend_Band__r.Name</formula>
    <label>Spend Band</label>
    <type>Text</type>
</CustomField>