unpackaged/main/default/objects/Customer_Price_List__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Customer Price Lists Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>