unpackaged/main/default/objects/Customer_Price_List__c/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <description>Code received from EBS</description>
    <label>Unique Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>